# The-Curve-DEX-Hackathon

./: CHALLENGE_VERIFICATION.md  DEMO_RECORDING_SCRIPT.md  Document.md  README.md  SIMPLE_ETH_GUIDE.md  curve_swap_example.cpp
curve-trading-agent/: CMakeLists.txt  STATUS_REPORT.md  demo.sh
curve-trading-agent/src/: main.cpp
curve-trading-agent/src/cli/: CLI.hpp
curve-trading-agent/src/config/: Config.hpp
curve-trading-agent/src/core/: LimitOrderEngine.hpp  Order.cpp  Order.hpp  OrderPolicies.cpp  OrderPolicies.hpp
curve-trading-agent/src/interfaces/: ICurveService.hpp  IERC20Service.hpp  IEthereumClient.hpp  IOrderStorage.hpp
curve-trading-agent/src/storage/: InMemoryOrderStorage.cpp  InMemoryOrderStorage.hpp
curve-trading-agent/src/utils/: PriceUtils.cpp  PriceUtils.hpp
curve-trading-agent/tests/: test_order.cpp  test_policies.cpp  test_price_utils.cpp
docs/: 00_CHALLENGE_OVERVIEW.md  01_REQUIREMENTS_CHECKLIST.md  02_ARCHITECTURE_DESIGN.md  03_DEVELOPMENT_PLAN.md  04_ETHEREUM_AND_CURVE_INTEGRATION.md  05_LIMIT_ORDER_ENGINE.md  06_CONFIGURATION_AND_SECRETS.md  07_TEST_STRATEGY_AND_CASES.md  08_RUNTIME_OPERATIONS.md  09_RECORDING_AND_SUBMISSION.md  10_TIMELINE_24H_PLAN.md  11_RISKS_AND_MITIGATIONS.md  12_GOCODE_ENVIRONMENT_NOTES.md  13_STARTER_CODE_INTEGRATION.md  14_COMPLEXITY_ASSESSMENT.md  15_LOCAL_DEVELOPMENT_STRATEGY.md  16_PRE_CHALLENGE_DEV_PLAN.md
hackathon-submission/: .gitignore  CLI.cpp  CLI.hpp  CMakeLists.txt  EXECUTION_ANALYSIS.md  FINAL_STATUS_REPORT.md  LimitOrderEngine.cpp  LimitOrderEngine.hpp  Order.cpp  Order.hpp  OrderPolicies.cpp  OrderPolicies.hpp  PriceFetcher.cpp  PriceFetcher.hpp  PriceUtils.cpp  PriceUtils.hpp  README.md  TESTING_GUIDE.md  blockchain_services.cpp  blockchain_services.hpp  check_balances.sh  main.cpp  test_execution.sh
